fix table, ul, ol spacing

--- a/src/components/_bio-table.scss
+++ b/src/components/_bio-table.scss
@@ -10,7 +10,7 @@
 		border: 1px solid hsl(0, 0%, 93%);
 	}
 	td {
-		vertical-align: top;
+		vertical-align: middle;
 		padding: 16px;
 		border: 1px solid hsl(0, 0%, 93%);
 	}
